maze.lessons.maze.wallfindfollow.WallFindFollowMaze.scala.error
Escaper:5: error: ambiguous reference to overloaded definition,
both method aMurD in class Escaper of type ()Boolean
and  method aMurD in class Escaper of type ()Boolean
match argument types () and expected result type Boolean
def garM() { if (aMurD()) {if (estFaceMur()) {gauche()} else avance()} else {if (aMurG()) {if (estFaceMur()) {droite()} else {avance()} } }
                 ^Escaper:5: error: not found: value aMurG
def garM() { if (aMurD()) {if (estFaceMur()) {gauche()} else avance()} else {if (aMurG()) {if (estFaceMur()) {droite()} else {avance()} } }
                                                                                 ^Escaper:2: error: method aMurD is defined twice
  conflicting symbols both originated in file 'plm.runtime1.Escaper'
def aMurD():Boolean = {var b =false;gauche();b = estFaceMur();droite();return b}
    ^